<resources>
    <string name="app_name">smartClass</string>
    <string name="menu_home">Instituições</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_news">Notícias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    Users menu-->
    <string name="progressbar_students_title">Alunos</string>
    <string name="progressbar_students_textbody1">Capacidade máxima:</string>
    <string name="progressbar_students_textbody2">Matriculados:</string>

    <string name="progressbar_teachers_title">Professores</string>
    <string name="progressbar_teachers_textbody1">Capacidade máxima:</string>
    <string name="progressbar_teachers_textbody2">Registrados:</string>

    <string name="progressbar_coordinators_title">Coordenadores</string>
    <string name="progressbar_coordinators_textbody1">Capacidade máxima:</string>
    <string name="progressbar_coordinators_textbody2">Registrados:</string>

    <string name="progressbar_classrooms_title">Salas Ocupadas</string>
    <string name="progressbar_classrooms_textbody1">Capacidade máxima:</string>
    <string name="progressbar_classrooms_textbody2">Ocupadas:</string>

    <string name="courses_institution_mainmenu">Cursos</string>
    <string name="classrooms_institution_mainmenu">Turmas</string>
    <string name="especial_search_character">\uf8ff</string>

    <string name="seg">seg</string>
    <string name="ter">ter</string>
    <string name="qua">qua</string>
    <string name="qui">qui</string>
    <string name="sex">sex</string>
    <string name="sab">sab</string>
    <string name="dom">dom</string>

</resources>